--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
         <div class="text">
             <div class="searchName">
-                <input type="text" id="inpName">
+                <input type="text" id="inpName" placeholder="search">
                 <button class="btn-text">click</button>
             </div>
         
